@@ -1,6 +1,6 @@
 #!/bin/bash
 
-set -e
+# set -e
 
 OUTPUT=${1}
 INPUT=${2}
@@ -39,8 +39,7 @@ echo "Building packages"
 java --module-path build-bin/mac/ \
   --add-opens jdk.jlink/jdk.tools.jlink.internal.packager=jdk.packager \
   -m jdk.packager/jdk.packager.Main \
-  create-installer  \
-  --installer-type dmg \
+  create-image  \
   --verbose \
   --echo-mode \
   --input "${INPUT}" \
@@ -58,7 +57,17 @@ java --module-path build-bin/mac/ \
   --runtime-image "${OUTPUT}/runtime" \
   --mac-bundle-identifier com.bardsoftware.ganttproject
 
+java --module-path build-bin/mac/ \
+  --add-opens jdk.jlink/jdk.tools.jlink.internal.packager=jdk.packager \
+  -m jdk.packager/jdk.packager.Main \
+  create-installer \
+  --verbose \
+  --echo-mode \
+  --output "${OUTPUT}/dist" \
+  --app-image "${OUTPUT}/dist/GanttProject.app" \
+  --installer-type dmg \
+  --name "GanttProject"
 
-#cd "${OUTPUT}/dist"
-#zip -r ganttproject-${VERSION}.zip GanttProject.app
+cd "${OUTPUT}/dist"
+zip -r ganttproject-${VERSION}.zip GanttProject.app
 rm -r GanttProject.app
